# Take_home

./: .gitignore  README.md  cluster_analysis.ipynb  data_cleaning.py  environment.yaml  pyproject.toml
data/: serp_cleaned_df.csv  serp_cluster_results.csv
